--- a/conda-recipes/llvmdev/meta.yaml
+++ b/conda-recipes/llvmdev/meta.yaml
@@ -1,6 +1,6 @@
-{% set shortversion = "5.0" %}
-{% set version = "5.0.0" %}
-{% set sha256 = "e35dcbae6084adcf4abb32514127c5eabd7d63b733852ccdb31e06f1373136da" %}
+{% set shortversion = "6.0" %}
+{% set version = "6.0.0" %}
+{% set sha256 = "1ff53c915b4e761ef400b803f07261ade637b0c269d99569f18040f3dcee4408" %}
 {% set build_number = "1" %}
 
 package:
@@ -13,7 +13,7 @@ source:
   sha256: {{ sha256 }}
   patches:
     # https://llvm.org/bugs/show_bug.cgi?id=15356
-    - ../llvm-elf-relocation.patch
+    #- ../llvm-elf-relocation.patch
     # http://lists.llvm.org/pipermail/llvm-dev/2016-January/094520.html
     - ../llvm-lto-static.patch   # [win]
 
