--- a/conda-recipes/llvmdev/meta.yaml
+++ b/conda-recipes/llvmdev/meta.yaml
@@ -1,7 +1,7 @@
 {% set shortversion = "6.0" %}
 {% set version = "6.0.0" %}
 {% set sha256 = "1ff53c915b4e761ef400b803f07261ade637b0c269d99569f18040f3dcee4408" %}
-{% set build_number = "1" %}
+{% set build_number = "0" %}
 
 package:
   name: llvmdev
@@ -12,17 +12,16 @@ source:
   url: http://llvm.org/releases/{{ version }}/llvm-{{ version }}.src.tar.xz
   sha256: {{ sha256 }}
   patches:
-    # https://llvm.org/bugs/show_bug.cgi?id=15356
-    #- ../llvm-elf-relocation.patch
     # http://lists.llvm.org/pipermail/llvm-dev/2016-January/094520.html
     - ../llvm-lto-static.patch   # [win]
+    # https://reviews.llvm.org/D44140 Fix LLVM-C symbol export
     - ../0001-Transforms-Add-missing-header-for-InstructionCombini.patch
 
 build:
   number: {{ build_number }}
   script_env:
     - PY_VCRUNTIME_REDIST
-    
+
 requirements:
   build:
     # We cannot do this on macOS or windows
