--- a/conda-recipes/llvmdev_manylinux1/meta.yaml
+++ b/conda-recipes/llvmdev_manylinux1/meta.yaml
@@ -1,4 +1,3 @@
-
 {% set shortversion = "6.0" %}
 {% set version = "6.0.0" %}
 {% set sha256 = "1ff53c915b4e761ef400b803f07261ade637b0c269d99569f18040f3dcee4408" %}
@@ -11,10 +10,9 @@ source:
   url: http://llvm.org/releases/{{ version }}/llvm-{{ version }}.src.tar.xz
   sha256: {{ sha256 }}
   patches:
-    # https://llvm.org/bugs/show_bug.cgi?id=15356
-    #- ../llvm-elf-relocation.patch
     # http://lists.llvm.org/pipermail/llvm-dev/2016-January/094520.html
     - ../llvm-lto-static.patch   # [win]
+    # https://reviews.llvm.org/D44140 Fix LLVM-C symbol export
     - ../0001-Transforms-Add-missing-header-for-InstructionCombini.patch
 
 build:
